--- a/SpringCRUD/src/main/resources/application.yml
+++ b/SpringCRUD/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   port: 8081
   error:
@@ -9,11 +8,27 @@ spring:
     username: root
     url: jdbc:mysql://localhost:3306/rent_service
     password: 123456
+  redis:
+  host: redis
+  port: 6379
+
 jpa:
   hibernate:
     ddl-auto: none
     show-sql: true
     open-in-view: true
+springdoc:
+  swagger-ui:
+    path=/swagger-ui-custom:
+      html:
+okta:
+  oauth2:
+    # Replace with the domain of your Auth0 tenant.
+    issuer: https://dev-2iuikzj50eqgyhsr.us.auth0.com/
+    # Replace with the API Identifier for your Auth0 API.
+    audience: https://demo/api
+
+
 
 
 
